[gd_scene load_steps=3 format=2]

[ext_resource path="res://main_scene.gd" type="Script" id=1]
[ext_resource path="res://MinimalUI/MinimalUI.tres" type="Theme" id=2]

[node name="main_scene" type="Node2D"]
script = ExtResource( 1 )

[node name="ButtonInsert" type="Button" parent="."]
margin_left = 164.0
margin_top = 299.0
margin_right = 221.0
margin_bottom = 341.0
theme = ExtResource( 2 )
text = "Insert"

[node name="ButtonSelect" type="Button" parent="."]
margin_left = 164.0
margin_top = 363.0
margin_right = 221.0
margin_bottom = 405.0
theme = ExtResource( 2 )
text = "Select"

[node name="ButtonUpdate" type="Button" parent="."]
margin_left = 163.0
margin_top = 425.0
margin_right = 221.0
margin_bottom = 467.0
theme = ExtResource( 2 )
text = "Update"

[node name="ButtonDelete" type="Button" parent="."]
margin_left = 165.0
margin_top = 484.0
margin_right = 222.0
margin_bottom = 526.0
theme = ExtResource( 2 )
text = "Delete"

[node name="ShowData" type="TextEdit" parent="."]
margin_left = 157.0
margin_top = 77.0
margin_right = 849.0
margin_bottom = 259.0
theme = ExtResource( 2 )

[node name="IDPlayer" type="LineEdit" parent="."]
margin_left = 554.0
margin_top = 301.0
margin_right = 808.0
margin_bottom = 351.0
theme = ExtResource( 2 )

[node name="PlayerName" type="LineEdit" parent="."]
margin_left = 553.0
margin_top = 380.0
margin_right = 807.0
margin_bottom = 430.0
theme = ExtResource( 2 )

[node name="Score" type="LineEdit" parent="."]
margin_left = 552.0
margin_top = 462.0
margin_right = 806.0
margin_bottom = 512.0
theme = ExtResource( 2 )

[node name="LabelID" type="Label" parent="."]
margin_left = 435.0
margin_top = 303.0
margin_right = 521.0
margin_bottom = 345.0
text = "ID"
valign = 1

[node name="LabelName" type="Label" parent="."]
margin_left = 434.0
margin_top = 381.0
margin_right = 518.0
margin_bottom = 423.0
text = "Player name"
valign = 1

[node name="LabelScore" type="Label" parent="."]
margin_left = 431.0
margin_top = 463.0
margin_right = 494.0
margin_bottom = 507.0
text = "Score"
valign = 1

[connection signal="pressed" from="ButtonInsert" to="." method="_on_ButtonInsert_pressed"]
[connection signal="pressed" from="ButtonSelect" to="." method="_on_ButtonSelect_pressed"]
[connection signal="pressed" from="ButtonUpdate" to="." method="_on_ButtonUpdate_pressed"]
[connection signal="pressed" from="ButtonDelete" to="." method="_on_ButtonDelete_pressed"]
